crates/mergeiq-core/tests/snapshots/golden__crlf-line-endings.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Crlf",
  "encoding": "Utf8",
  "chunk_count": 1,
  "chunks": [
    {
      "kind": "OursOnly",
      "base": [
        1,
        2
      ],
      "ours": [
        1,
        2
      ],
      "theirs": [
        1,
        2
      ]
    }
  ]
}
