crates/mergeiq-core/tests/snapshots/golden__go-sample.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 1,
  "chunks": [
    {
      "kind": "OursOnly",
      "base": [
        5,
        6
      ],
      "ours": [
        5,
        6
      ],
      "theirs": [
        5,
        6
      ]
    }
  ]
}
