crates/mergeiq-core/tests/snapshots/golden__java-sample.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 2,
  "chunks": [
    {
      "kind": "TheirsOnly",
      "base": [
        1,
        2
      ],
      "ours": [
        1,
        2
      ],
      "theirs": [
        1,
        2
      ]
    },
    {
      "kind": "OursOnly",
      "base": [
        8,
        9
      ],
      "ours": [
        8,
        9
      ],
      "theirs": [
        8,
        9
      ]
    }
  ]
}
