crates/mergeiq-core/tests/snapshots/golden__javascript-sample.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 2,
  "chunks": [
    {
      "kind": "TheirsOnly",
      "base": [
        1,
        2
      ],
      "ours": [
        1,
        2
      ],
      "theirs": [
        1,
        2
      ]
    },
    {
      "kind": "OursOnly",
      "base": [
        4,
        5
      ],
      "ours": [
        4,
        9
      ],
      "theirs": [
        4,
        5
      ]
    }
  ]
}
