crates/mergeiq-core/tests/snapshots/golden__json-sample.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 2,
  "chunks": [
    {
      "kind": "TheirsOnly",
      "base": [
        1,
        2
      ],
      "ours": [
        1,
        2
      ],
      "theirs": [
        1,
        2
      ]
    },
    {
      "kind": "OursOnly",
      "base": [
        3,
        4
      ],
      "ours": [
        3,
        4
      ],
      "theirs": [
        3,
        4
      ]
    }
  ]
}
