crates/mergeiq-core/tests/snapshots/golden__multi-conflict-file.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 2,
  "chunks": [
    {
      "kind": "Conflict",
      "base": [
        0,
        1
      ],
      "ours": [
        0,
        1
      ],
      "theirs": [
        0,
        1
      ]
    },
    {
      "kind": "Conflict",
      "base": [
        5,
        6
      ],
      "ours": [
        5,
        6
      ],
      "theirs": [
        5,
        6
      ]
    }
  ]
}
